src/Samples/Common/Views/Errors/MarkupControlPropertiesSameNameWithBase.dotcontrol
@viewModel object
@baseType DotVVM.Samples.Common.ViewModels.Errors.MarkupControlPropertiesSameNameWithBase

@property bool MyProperty

{{value: _control.MyProperty}}
